# logl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/bg-color-cycle/: CMakeLists.txt
apps/bg-color-cycle/src/: bg-color-cycle.cc
apps/first-shader/: CMakeLists.txt
apps/first-shader/src/: first-shader.cc
apps/scaffold-test/: CMakeLists.txt
apps/scaffold-test/src/: scaffold-test.cc
apps/shaders/: CMakeLists.txt
apps/shaders/res/shaders/: basic.fs  basic.vs  pos.vs  yflip.vs
apps/shaders/src/: shaders.cc
olga/: CMakeLists.txt
olga/libOlga/: App.cc  App.hh  Color.cc  Color.hh  EventDispatcher.cc  EventDispatcher.hh  Shader.cc  Shader.hh  Types.hh
olga/libOlga/geometry/: Point.hh  Triangle.hh
olga/libOlga/io/: Utils.cc  Utils.hh
olga/libOlga/math/: Vec4.cc  Vec4.hh
